--- a/memo_app/firenote/app/build.gradle
+++ b/memo_app/firenote/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     // 구글 플레이서비스 인증 기능도 의존시켜야 한다
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-database:19.1.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
